# Listycpp

./: Autor.md  CMakeLists.txt  README.md  a.out  zad1a.cpp  zad1b.cpp  zad1c.cpp  zad1d.cpp  zad1e.cpp  zad1f.cpp  zad2.cpp
build-lista1-Desktop-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake  zad1  zad2  zad2b  zad3  zad3b
build-lista1-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-bea2fabc8b78f6557bd7.json  cmakeFiles-v1-b71f51188fe7188c27f9.json  codemodel-v2-e63b477468dc66413df1.json  index-2024-03-14T10-09-16-0373.json  target-zad2b-Debug-251e4a9886748ccac515.json  target-zad3-Debug-fb0f8f28af242b6e176b.json  target-zad3b-Debug-a59ab25a274af884faed.json
build-lista1-Desktop-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-889119cc09c162b2bf20.json  index-2024-03-07T10-34-26-0385.json  target-zad1-Debug-2142941ee5f2836a2afc.json  target-zad2-Debug-aca9d6643d105630d552.json  target-zad3-Debug-9d3fded219c9defcb26a.json
lista1/: CMakeLists.txt  zad1.cpp  zad2b.cpp  zad3.cpp  zad3b.cpp
