cmake_minimum_required(VERSION 3.5)

project(lista2 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(zad1a zad1a.cpp)
add_executable(zad1b zad1b.cpp)
add_executable(zad1c zad1c.cpp)
add_executable(zad1d zad1d.cpp)
add_executable(zad1e zad1e.cpp)
add_executable(zad1f zad1f.cpp)
add_executable(zad2 zad2.cpp)
